[package]
name = "rust-pv-userlookup"
version = "0.2.0"
edition = "2024"
authors = ["Giginss"]

[dependencies]
cli-clipboard = "0.4.0"
eframe = "0.35.0"
egui = "0.35.0"
egui-file-dialog = "0.14.1"
reqwest = { version = "0.13.4", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
